# trezor

backend/: .env.example  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 07ccf54079df_.py  30a2e1c32f38_.py  7870dd8b8d57_.py  8bb07a00e60b_.py  8d9b2e0d0385_.py  b204d618230b_.py
backend/app/api/routes/: api.py  pastes.py
backend/app/core/: config.py
backend/app/crud/: __init__.py  paste.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  paste.py
backend/app/schemas/: __init__.py  paste.py
frontend/: craco.config.js  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.css  App.tsx
frontend/src/components/: Editor.tsx  Logo.tsx  NavLink.tsx
frontend/src/components/form/: Select.tsx
frontend/src/components/icons/: IconLoader.tsx
frontend/src/layouts/: Default.tsx
frontend/src/pages/Paste/: Create.tsx  Show.tsx
frontend/src/services/: index.tsx
frontend/src/utils/: useForm.tsx
